src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AT
    BEGIN
    COLON
    EXCLAMATION
    EXIT
    LEFT_PAREN
    NEWLINE
    REPEAT
    RIGHT_PAREN
    SEMICOLON
    WHILE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> comandos
Rule 2     comandos -> comando
Rule 3     comandos -> comandos comando
Rule 4     comando -> exp_aritmeticas
Rule 5     comando -> exp_relacionais
Rule 6     comando -> functions
Rule 7     comando -> values
Rule 8     comando -> creating_funcs
Rule 9     comando -> variable
Rule 10    comando -> flow_control
Rule 11    exp_aritmeticas -> comando comando PLUS
Rule 12    exp_aritmeticas -> comando comando MINUS
Rule 13    exp_aritmeticas -> comando comando TIMES
Rule 14    exp_aritmeticas -> comando comando DIVIDE
Rule 15    exp_aritmeticas -> comando comando MOD
Rule 16    exp_relacionais -> comando comando NOT
Rule 17    exp_relacionais -> comando comando INF
Rule 18    exp_relacionais -> comando comando SUP
Rule 19    exp_relacionais -> comando comando INFEQ
Rule 20    exp_relacionais -> comando comando SUPEQ
Rule 21    values -> NUMBER
Rule 22    values -> STRING
Rule 23    flow_control -> if
Rule 24    flow_control -> else
Rule 25    flow_control -> then
Rule 26    flow_control -> do
Rule 27    flow_control -> loop
Rule 28    if -> IF
Rule 29    else -> ELSE
Rule 30    then -> THEN
Rule 31    do -> DO
Rule 32    loop -> LOOP
Rule 33    functions -> stdout
Rule 34    functions -> dot
Rule 35    functions -> space
Rule 36    functions -> dup
Rule 37    functions -> comment
Rule 38    functions -> drop
Rule 39    functions -> swap
Rule 40    functions -> rot
Rule 41    functions -> over
Rule 42    functions -> concat
Rule 43    functions -> cr
Rule 44    functions -> emit
Rule 45    functions -> char
Rule 46    functions -> key
Rule 47    functions -> spaces
Rule 48    functions -> 2dup
Rule 49    stdout -> STDOUT
Rule 50    dot -> DOT
Rule 51    space -> SPACE
Rule 52    dup -> DUP
Rule 53    comment -> COMMENT_LINE
Rule 54    comment -> COMMENT_BLOCK
Rule 55    drop -> DROP
Rule 56    swap -> SWAP
Rule 57    rot -> ROT
Rule 58    over -> OVER
Rule 59    concat -> CONCAT
Rule 60    cr -> CR
Rule 61    emit -> EMIT
Rule 62    char -> CHAR
Rule 63    key -> KEY
Rule 64    spaces -> SPACES
Rule 65    2dup -> 2DUP
Rule 66    variable -> variable_definition
Rule 67    variable -> variable_assignment
Rule 68    variable -> variable_fetch
Rule 69    variable -> variable_print
Rule 70    variable_definition -> VARIABLE_DEFENITION
Rule 71    variable_assignment -> VARIABLE_ASSIGNMENT
Rule 72    variable_fetch -> VARIABLE_FETCH
Rule 73    variable_print -> VARIABLE_PRINT
Rule 74    creating_funcs -> func_criada
Rule 75    creating_funcs -> function
Rule 76    function -> FUNCTION
Rule 77    function -> FUNCTION_CALL
Rule 78    func_criada -> FUNC_BODY

Terminals, with rules where they appear

2DUP                 : 65
AT                   : 
BEGIN                : 
CHAR                 : 62
COLON                : 
COMMENT_BLOCK        : 54
COMMENT_LINE         : 53
CONCAT               : 59
CR                   : 60
DIVIDE               : 14
DO                   : 31
DOT                  : 50
DROP                 : 55
DUP                  : 52
ELSE                 : 29
EMIT                 : 61
EXCLAMATION          : 
EXIT                 : 
FUNCTION             : 76
FUNCTION_CALL        : 77
FUNC_BODY            : 78
IF                   : 28
INF                  : 17
INFEQ                : 19
KEY                  : 63
LEFT_PAREN           : 
LOOP                 : 32
MINUS                : 12
MOD                  : 15
NEWLINE              : 
NOT                  : 16
NUMBER               : 21
OVER                 : 58
PLUS                 : 11
REPEAT               : 
RIGHT_PAREN          : 
ROT                  : 57
SEMICOLON            : 
SPACE                : 51
SPACES               : 64
STDOUT               : 49
STRING               : 22
SUP                  : 18
SUPEQ                : 20
SWAP                 : 56
THEN                 : 30
TIMES                : 13
VARIABLE_ASSIGNMENT  : 71
VARIABLE_DEFENITION  : 70
VARIABLE_FETCH       : 72
VARIABLE_PRINT       : 73
WHILE                : 
error                : 

Nonterminals, with rules where they appear

2dup                 : 48
char                 : 45
comando              : 2 3 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20
comandos             : 1 3
comment              : 37
concat               : 42
cr                   : 43
creating_funcs       : 8
do                   : 26
dot                  : 34
drop                 : 38
dup                  : 36
else                 : 24
emit                 : 44
exp_aritmeticas      : 4
exp_relacionais      : 5
flow_control         : 10
func_criada          : 74
function             : 75
functions            : 6
if                   : 23
key                  : 46
loop                 : 27
over                 : 41
programa             : 0
rot                  : 40
space                : 35
spaces               : 47
stdout               : 33
swap                 : 39
then                 : 25
values               : 7
variable             : 9
variable_assignment  : 67
variable_definition  : 66
variable_fetch       : 68
variable_print       : 69

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . comandos
    (2) comandos -> . comando
    (3) comandos -> . comandos comando
    (4) comando -> . exp_aritmeticas
    (5) comando -> . exp_relacionais
    (6) comando -> . functions
    (7) comando -> . values
    (8) comando -> . creating_funcs
    (9) comando -> . variable
    (10) comando -> . flow_control
    (11) exp_aritmeticas -> . comando comando PLUS
    (12) exp_aritmeticas -> . comando comando MINUS
    (13) exp_aritmeticas -> . comando comando TIMES
    (14) exp_aritmeticas -> . comando comando DIVIDE
    (15) exp_aritmeticas -> . comando comando MOD
    (16) exp_relacionais -> . comando comando NOT
    (17) exp_relacionais -> . comando comando INF
    (18) exp_relacionais -> . comando comando SUP
    (19) exp_relacionais -> . comando comando INFEQ
    (20) exp_relacionais -> . comando comando SUPEQ
    (33) functions -> . stdout
    (34) functions -> . dot
    (35) functions -> . space
    (36) functions -> . dup
    (37) functions -> . comment
    (38) functions -> . drop
    (39) functions -> . swap
    (40) functions -> . rot
    (41) functions -> . over
    (42) functions -> . concat
    (43) functions -> . cr
    (44) functions -> . emit
    (45) functions -> . char
    (46) functions -> . key
    (47) functions -> . spaces
    (48) functions -> . 2dup
    (21) values -> . NUMBER
    (22) values -> . STRING
    (74) creating_funcs -> . func_criada
    (75) creating_funcs -> . function
    (66) variable -> . variable_definition
    (67) variable -> . variable_assignment
    (68) variable -> . variable_fetch
    (69) variable -> . variable_print
    (23) flow_control -> . if
    (24) flow_control -> . else
    (25) flow_control -> . then
    (26) flow_control -> . do
    (27) flow_control -> . loop
    (49) stdout -> . STDOUT
    (50) dot -> . DOT
    (51) space -> . SPACE
    (52) dup -> . DUP
    (53) comment -> . COMMENT_LINE
    (54) comment -> . COMMENT_BLOCK
    (55) drop -> . DROP
    (56) swap -> . SWAP
    (57) rot -> . ROT
    (58) over -> . OVER
    (59) concat -> . CONCAT
    (60) cr -> . CR
    (61) emit -> . EMIT
    (62) char -> . CHAR
    (63) key -> . KEY
    (64) spaces -> . SPACES
    (65) 2dup -> . 2DUP
    (78) func_criada -> . FUNC_BODY
    (76) function -> . FUNCTION
    (77) function -> . FUNCTION_CALL
    (70) variable_definition -> . VARIABLE_DEFENITION
    (71) variable_assignment -> . VARIABLE_ASSIGNMENT
    (72) variable_fetch -> . VARIABLE_FETCH
    (73) variable_print -> . VARIABLE_PRINT
    (28) if -> . IF
    (29) else -> . ELSE
    (30) then -> . THEN
    (31) do -> . DO
    (32) loop -> . LOOP

    NUMBER          shift and go to state 27
    STRING          shift and go to state 28
    STDOUT          shift and go to state 40
    DOT             shift and go to state 41
    SPACE           shift and go to state 42
    DUP             shift and go to state 43
    COMMENT_LINE    shift and go to state 44
    COMMENT_BLOCK   shift and go to state 45
    DROP            shift and go to state 46
    SWAP            shift and go to state 47
    ROT             shift and go to state 48
    OVER            shift and go to state 49
    CONCAT          shift and go to state 50
    CR              shift and go to state 51
    EMIT            shift and go to state 52
    CHAR            shift and go to state 53
    KEY             shift and go to state 54
    SPACES          shift and go to state 55
    2DUP            shift and go to state 56
    FUNC_BODY       shift and go to state 57
    FUNCTION        shift and go to state 58
    FUNCTION_CALL   shift and go to state 59
    VARIABLE_DEFENITION shift and go to state 60
    VARIABLE_ASSIGNMENT shift and go to state 61
    VARIABLE_FETCH  shift and go to state 62
    VARIABLE_PRINT  shift and go to state 63
    IF              shift and go to state 64
    ELSE            shift and go to state 65
    THEN            shift and go to state 66
    DO              shift and go to state 67
    LOOP            shift and go to state 68

    programa                       shift and go to state 1
    comandos                       shift and go to state 2
    comando                        shift and go to state 3
    exp_aritmeticas                shift and go to state 4
    exp_relacionais                shift and go to state 5
    functions                      shift and go to state 6
    values                         shift and go to state 7
    creating_funcs                 shift and go to state 8
    variable                       shift and go to state 9
    flow_control                   shift and go to state 10
    stdout                         shift and go to state 11
    dot                            shift and go to state 12
    space                          shift and go to state 13
    dup                            shift and go to state 14
    comment                        shift and go to state 15
    drop                           shift and go to state 16
    swap                           shift and go to state 17
    rot                            shift and go to state 18
    over                           shift and go to state 19
    concat                         shift and go to state 20
    cr                             shift and go to state 21
    emit                           shift and go to state 22
    char                           shift and go to state 23
    key                            shift and go to state 24
    spaces                         shift and go to state 25
    2dup                           shift and go to state 26
    func_criada                    shift and go to state 29
    function                       shift and go to state 30
    variable_definition            shift and go to state 31
    variable_assignment            shift and go to state 32
    variable_fetch                 shift and go to state 33
    variable_print                 shift and go to state 34
    if                             shift and go to state 35
    else                           shift and go to state 36
    then                           shift and go to state 37
    do                             shift and go to state 38
    loop                           shift and go to state 39

state 1

    (0) S' -> programa .



state 2

    (1) programa -> comandos .
    (3) comandos -> comandos . comando
    (4) comando -> . exp_aritmeticas
    (5) comando -> . exp_relacionais
    (6) comando -> . functions
    (7) comando -> . values
    (8) comando -> . creating_funcs
    (9) comando -> . variable
    (10) comando -> . flow_control
    (11) exp_aritmeticas -> . comando comando PLUS
    (12) exp_aritmeticas -> . comando comando MINUS
    (13) exp_aritmeticas -> . comando comando TIMES
    (14) exp_aritmeticas -> . comando comando DIVIDE
    (15) exp_aritmeticas -> . comando comando MOD
    (16) exp_relacionais -> . comando comando NOT
    (17) exp_relacionais -> . comando comando INF
    (18) exp_relacionais -> . comando comando SUP
    (19) exp_relacionais -> . comando comando INFEQ
    (20) exp_relacionais -> . comando comando SUPEQ
    (33) functions -> . stdout
    (34) functions -> . dot
    (35) functions -> . space
    (36) functions -> . dup
    (37) functions -> . comment
    (38) functions -> . drop
    (39) functions -> . swap
    (40) functions -> . rot
    (41) functions -> . over
    (42) functions -> . concat
    (43) functions -> . cr
    (44) functions -> . emit
    (45) functions -> . char
    (46) functions -> . key
    (47) functions -> . spaces
    (48) functions -> . 2dup
    (21) values -> . NUMBER
    (22) values -> . STRING
    (74) creating_funcs -> . func_criada
    (75) creating_funcs -> . function
    (66) variable -> . variable_definition
    (67) variable -> . variable_assignment
    (68) variable -> . variable_fetch
    (69) variable -> . variable_print
    (23) flow_control -> . if
    (24) flow_control -> . else
    (25) flow_control -> . then
    (26) flow_control -> . do
    (27) flow_control -> . loop
    (49) stdout -> . STDOUT
    (50) dot -> . DOT
    (51) space -> . SPACE
    (52) dup -> . DUP
    (53) comment -> . COMMENT_LINE
    (54) comment -> . COMMENT_BLOCK
    (55) drop -> . DROP
    (56) swap -> . SWAP
    (57) rot -> . ROT
    (58) over -> . OVER
    (59) concat -> . CONCAT
    (60) cr -> . CR
    (61) emit -> . EMIT
    (62) char -> . CHAR
    (63) key -> . KEY
    (64) spaces -> . SPACES
    (65) 2dup -> . 2DUP
    (78) func_criada -> . FUNC_BODY
    (76) function -> . FUNCTION
    (77) function -> . FUNCTION_CALL
    (70) variable_definition -> . VARIABLE_DEFENITION
    (71) variable_assignment -> . VARIABLE_ASSIGNMENT
    (72) variable_fetch -> . VARIABLE_FETCH
    (73) variable_print -> . VARIABLE_PRINT
    (28) if -> . IF
    (29) else -> . ELSE
    (30) then -> . THEN
    (31) do -> . DO
    (32) loop -> . LOOP

    $end            reduce using rule 1 (programa -> comandos .)
    NUMBER          shift and go to state 27
    STRING          shift and go to state 28
    STDOUT          shift and go to state 40
    DOT             shift and go to state 41
    SPACE           shift and go to state 42
    DUP             shift and go to state 43
    COMMENT_LINE    shift and go to state 44
    COMMENT_BLOCK   shift and go to state 45
    DROP            shift and go to state 46
    SWAP            shift and go to state 47
    ROT             shift and go to state 48
    OVER            shift and go to state 49
    CONCAT          shift and go to state 50
    CR              shift and go to state 51
    EMIT            shift and go to state 52
    CHAR            shift and go to state 53
    KEY             shift and go to state 54
    SPACES          shift and go to state 55
    2DUP            shift and go to state 56
    FUNC_BODY       shift and go to state 57
    FUNCTION        shift and go to state 58
    FUNCTION_CALL   shift and go to state 59
    VARIABLE_DEFENITION shift and go to state 60
    VARIABLE_ASSIGNMENT shift and go to state 61
    VARIABLE_FETCH  shift and go to state 62
    VARIABLE_PRINT  shift and go to state 63
    IF              shift and go to state 64
    ELSE            shift and go to state 65
    THEN            shift and go to state 66
    DO              shift and go to state 67
    LOOP            shift and go to state 68

    comando                        shift and go to state 69
    exp_aritmeticas                shift and go to state 4
    exp_relacionais                shift and go to state 5
    functions                      shift and go to state 6
    values                         shift and go to state 7
    creating_funcs                 shift and go to state 8
    variable                       shift and go to state 9
    flow_control                   shift and go to state 10
    stdout                         shift and go to state 11
    dot                            shift and go to state 12
    space                          shift and go to state 13
    dup                            shift and go to state 14
    comment                        shift and go to state 15
    drop                           shift and go to state 16
    swap                           shift and go to state 17
    rot                            shift and go to state 18
    over                           shift and go to state 19
    concat                         shift and go to state 20
    cr                             shift and go to state 21
    emit                           shift and go to state 22
    char                           shift and go to state 23
    key                            shift and go to state 24
    spaces                         shift and go to state 25
    2dup                           shift and go to state 26
    func_criada                    shift and go to state 29
    function                       shift and go to state 30
    variable_definition            shift and go to state 31
    variable_assignment            shift and go to state 32
    variable_fetch                 shift and go to state 33
    variable_print                 shift and go to state 34
    if                             shift and go to state 35
    else                           shift and go to state 36
    then                           shift and go to state 37
    do                             shift and go to state 38
    loop                           shift and go to state 39

state 3

    (2) comandos -> comando .
    (11) exp_aritmeticas -> comando . comando PLUS
    (12) exp_aritmeticas -> comando . comando MINUS
    (13) exp_aritmeticas -> comando . comando TIMES
    (14) exp_aritmeticas -> comando . comando DIVIDE
    (15) exp_aritmeticas -> comando . comando MOD
    (16) exp_relacionais -> comando . comando NOT
    (17) exp_relacionais -> comando . comando INF
    (18) exp_relacionais -> comando . comando SUP
    (19) exp_relacionais -> comando . comando INFEQ
    (20) exp_relacionais -> comando . comando SUPEQ
    (4) comando -> . exp_aritmeticas
    (5) comando -> . exp_relacionais
    (6) comando -> . functions
    (7) comando -> . values
    (8) comando -> . creating_funcs
    (9) comando -> . variable
    (10) comando -> . flow_control
    (11) exp_aritmeticas -> . comando comando PLUS
    (12) exp_aritmeticas -> . comando comando MINUS
    (13) exp_aritmeticas -> . comando comando TIMES
    (14) exp_aritmeticas -> . comando comando DIVIDE
    (15) exp_aritmeticas -> . comando comando MOD
    (16) exp_relacionais -> . comando comando NOT
    (17) exp_relacionais -> . comando comando INF
    (18) exp_relacionais -> . comando comando SUP
    (19) exp_relacionais -> . comando comando INFEQ
    (20) exp_relacionais -> . comando comando SUPEQ
    (33) functions -> . stdout
    (34) functions -> . dot
    (35) functions -> . space
    (36) functions -> . dup
    (37) functions -> . comment
    (38) functions -> . drop
    (39) functions -> . swap
    (40) functions -> . rot
    (41) functions -> . over
    (42) functions -> . concat
    (43) functions -> . cr
    (44) functions -> . emit
    (45) functions -> . char
    (46) functions -> . key
    (47) functions -> . spaces
    (48) functions -> . 2dup
    (21) values -> . NUMBER
    (22) values -> . STRING
    (74) creating_funcs -> . func_criada
    (75) creating_funcs -> . function
    (66) variable -> . variable_definition
    (67) variable -> . variable_assignment
    (68) variable -> . variable_fetch
    (69) variable -> . variable_print
    (23) flow_control -> . if
    (24) flow_control -> . else
    (25) flow_control -> . then
    (26) flow_control -> . do
    (27) flow_control -> . loop
    (49) stdout -> . STDOUT
    (50) dot -> . DOT
    (51) space -> . SPACE
    (52) dup -> . DUP
    (53) comment -> . COMMENT_LINE
    (54) comment -> . COMMENT_BLOCK
    (55) drop -> . DROP
    (56) swap -> . SWAP
    (57) rot -> . ROT
    (58) over -> . OVER
    (59) concat -> . CONCAT
    (60) cr -> . CR
    (61) emit -> . EMIT
    (62) char -> . CHAR
    (63) key -> . KEY
    (64) spaces -> . SPACES
    (65) 2dup -> . 2DUP
    (78) func_criada -> . FUNC_BODY
    (76) function -> . FUNCTION
    (77) function -> . FUNCTION_CALL
    (70) variable_definition -> . VARIABLE_DEFENITION
    (71) variable_assignment -> . VARIABLE_ASSIGNMENT
    (72) variable_fetch -> . VARIABLE_FETCH
    (73) variable_print -> . VARIABLE_PRINT
    (28) if -> . IF
    (29) else -> . ELSE
    (30) then -> . THEN
    (31) do -> . DO
    (32) loop -> . LOOP

  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for STDOUT resolved as shift
  ! shift/reduce conflict for DOT resolved as shift
  ! shift/reduce conflict for SPACE resolved as shift
  ! shift/reduce conflict for DUP resolved as shift
  ! shift/reduce conflict for COMMENT_LINE resolved as shift
  ! shift/reduce conflict for COMMENT_BLOCK resolved as shift
  ! shift/reduce conflict for DROP resolved as shift
  ! shift/reduce conflict for SWAP resolved as shift
  ! shift/reduce conflict for ROT resolved as shift
  ! shift/reduce conflict for OVER resolved as shift
  ! shift/reduce conflict for CONCAT resolved as shift
  ! shift/reduce conflict for CR resolved as shift
  ! shift/reduce conflict for EMIT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for KEY resolved as shift
  ! shift/reduce conflict for SPACES resolved as shift
  ! shift/reduce conflict for 2DUP resolved as shift
  ! shift/reduce conflict for FUNC_BODY resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for FUNCTION_CALL resolved as shift
  ! shift/reduce conflict for VARIABLE_DEFENITION resolved as shift
  ! shift/reduce conflict for VARIABLE_ASSIGNMENT resolved as shift
  ! shift/reduce conflict for VARIABLE_FETCH resolved as shift
  ! shift/reduce conflict for VARIABLE_PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for ELSE resolved as shift
  ! shift/reduce conflict for THEN resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for LOOP resolved as shift
    $end            reduce using rule 2 (comandos -> comando .)
    NUMBER          shift and go to state 27
    STRING          shift and go to state 28
    STDOUT          shift and go to state 40
    DOT             shift and go to state 41
    SPACE           shift and go to state 42
    DUP             shift and go to state 43
    COMMENT_LINE    shift and go to state 44
    COMMENT_BLOCK   shift and go to state 45
    DROP            shift and go to state 46
    SWAP            shift and go to state 47
    ROT             shift and go to state 48
    OVER            shift and go to state 49
    CONCAT          shift and go to state 50
    CR              shift and go to state 51
    EMIT            shift and go to state 52
    CHAR            shift and go to state 53
    KEY             shift and go to state 54
    SPACES          shift and go to state 55
    2DUP            shift and go to state 56
    FUNC_BODY       shift and go to state 57
    FUNCTION        shift and go to state 58
    FUNCTION_CALL   shift and go to state 59
    VARIABLE_DEFENITION shift and go to state 60
    VARIABLE_ASSIGNMENT shift and go to state 61
    VARIABLE_FETCH  shift and go to state 62
    VARIABLE_PRINT  shift and go to state 63
    IF              shift and go to state 64
    ELSE            shift and go to state 65
    THEN            shift and go to state 66
    DO              shift and go to state 67
    LOOP            shift and go to state 68

  ! NUMBER          [ reduce using rule 2 (comandos -> comando .) ]
  ! STRING          [ reduce using rule 2 (comandos -> comando .) ]
  ! STDOUT          [ reduce using rule 2 (comandos -> comando .) ]
  ! DOT             [ reduce using rule 2 (comandos -> comando .) ]
  ! SPACE           [ reduce using rule 2 (comandos -> comando .) ]
  ! DUP             [ reduce using rule 2 (comandos -> comando .) ]
  ! COMMENT_LINE    [ reduce using rule 2 (comandos -> comando .) ]
  ! COMMENT_BLOCK   [ reduce using rule 2 (comandos -> comando .) ]
  ! DROP            [ reduce using rule 2 (comandos -> comando .) ]
  ! SWAP            [ reduce using rule 2 (comandos -> comando .) ]
  ! ROT             [ reduce using rule 2 (comandos -> comando .) ]
  ! OVER            [ reduce using rule 2 (comandos -> comando .) ]
  ! CONCAT          [ reduce using rule 2 (comandos -> comando .) ]
  ! CR              [ reduce using rule 2 (comandos -> comando .) ]
  ! EMIT            [ reduce using rule 2 (comandos -> comando .) ]
  ! CHAR            [ reduce using rule 2 (comandos -> comando .) ]
  ! KEY             [ reduce using rule 2 (comandos -> comando .) ]
  ! SPACES          [ reduce using rule 2 (comandos -> comando .) ]
  ! 2DUP            [ reduce using rule 2 (comandos -> comando .) ]
  ! FUNC_BODY       [ reduce using rule 2 (comandos -> comando .) ]
  ! FUNCTION        [ reduce using rule 2 (comandos -> comando .) ]
  ! FUNCTION_CALL   [ reduce using rule 2 (comandos -> comando .) ]
  ! VARIABLE_DEFENITION [ reduce using rule 2 (comandos -> comando .) ]
  ! VARIABLE_ASSIGNMENT [ reduce using rule 2 (comandos -> comando .) ]
  ! VARIABLE_FETCH  [ reduce using rule 2 (comandos -> comando .) ]
  ! VARIABLE_PRINT  [ reduce using rule 2 (comandos -> comando .) ]
  ! IF              [ reduce using rule 2 (comandos -> comando .) ]
  ! ELSE            [ reduce using rule 2 (comandos -> comando .) ]
  ! THEN            [ reduce using rule 2 (comandos -> comando .) ]
  ! DO              [ reduce using rule 2 (comandos -> comando .) ]
  ! LOOP            [ reduce using rule 2 (comandos -> comando .) ]

    comando                        shift and go to state 70
    exp_aritmeticas                shift and go to state 4
    exp_relacionais                shift and go to state 5
    functions                      shift and go to state 6
    values                         shift and go to state 7
    creating_funcs                 shift and go to state 8
    variable                       shift and go to state 9
    flow_control                   shift and go to state 10
    stdout                         shift and go to state 11
    dot                            shift and go to state 12
    space                          shift and go to state 13
    dup                            shift and go to state 14
    comment                        shift and go to state 15
    drop                           shift and go to state 16
    swap                           shift and go to state 17
    rot                            shift and go to state 18
    over                           shift and go to state 19
    concat                         shift and go to state 20
    cr                             shift and go to state 21
    emit                           shift and go to state 22
    char                           shift and go to state 23
    key                            shift and go to state 24
    spaces                         shift and go to state 25
    2dup                           shift and go to state 26
    func_criada                    shift and go to state 29
    function                       shift and go to state 30
    variable_definition            shift and go to state 31
    variable_assignment            shift and go to state 32
    variable_fetch                 shift and go to state 33
    variable_print                 shift and go to state 34
    if                             shift and go to state 35
    else                           shift and go to state 36
    then                           shift and go to state 37
    do                             shift and go to state 38
    loop                           shift and go to state 39

state 4

    (4) comando -> exp_aritmeticas .

    NUMBER          reduce using rule 4 (comando -> exp_aritmeticas .)
    STRING          reduce using rule 4 (comando -> exp_aritmeticas .)
    STDOUT          reduce using rule 4 (comando -> exp_aritmeticas .)
    DOT             reduce using rule 4 (comando -> exp_aritmeticas .)
    SPACE           reduce using rule 4 (comando -> exp_aritmeticas .)
    DUP             reduce using rule 4 (comando -> exp_aritmeticas .)
    COMMENT_LINE    reduce using rule 4 (comando -> exp_aritmeticas .)
    COMMENT_BLOCK   reduce using rule 4 (comando -> exp_aritmeticas .)
    DROP            reduce using rule 4 (comando -> exp_aritmeticas .)
    SWAP            reduce using rule 4 (comando -> exp_aritmeticas .)
    ROT             reduce using rule 4 (comando -> exp_aritmeticas .)
    OVER            reduce using rule 4 (comando -> exp_aritmeticas .)
    CONCAT          reduce using rule 4 (comando -> exp_aritmeticas .)
    CR              reduce using rule 4 (comando -> exp_aritmeticas .)
    EMIT            reduce using rule 4 (comando -> exp_aritmeticas .)
    CHAR            reduce using rule 4 (comando -> exp_aritmeticas .)
    KEY             reduce using rule 4 (comando -> exp_aritmeticas .)
    SPACES          reduce using rule 4 (comando -> exp_aritmeticas .)
    2DUP            reduce using rule 4 (comando -> exp_aritmeticas .)
    FUNC_BODY       reduce using rule 4 (comando -> exp_aritmeticas .)
    FUNCTION        reduce using rule 4 (comando -> exp_aritmeticas .)
    FUNCTION_CALL   reduce using rule 4 (comando -> exp_aritmeticas .)
    VARIABLE_DEFENITION reduce using rule 4 (comando -> exp_aritmeticas .)
    VARIABLE_ASSIGNMENT reduce using rule 4 (comando -> exp_aritmeticas .)
    VARIABLE_FETCH  reduce using rule 4 (comando -> exp_aritmeticas .)
    VARIABLE_PRINT  reduce using rule 4 (comando -> exp_aritmeticas .)
    IF              reduce using rule 4 (comando -> exp_aritmeticas .)
    ELSE            reduce using rule 4 (comando -> exp_aritmeticas .)
    THEN            reduce using rule 4 (comando -> exp_aritmeticas .)
    DO              reduce using rule 4 (comando -> exp_aritmeticas .)
    LOOP            reduce using rule 4 (comando -> exp_aritmeticas .)
    $end            reduce using rule 4 (comando -> exp_aritmeticas .)
    PLUS            reduce using rule 4 (comando -> exp_aritmeticas .)
    MINUS           reduce using rule 4 (comando -> exp_aritmeticas .)
    TIMES           reduce using rule 4 (comando -> exp_aritmeticas .)
    DIVIDE          reduce using rule 4 (comando -> exp_aritmeticas .)
    MOD             reduce using rule 4 (comando -> exp_aritmeticas .)
    NOT             reduce using rule 4 (comando -> exp_aritmeticas .)
    INF             reduce using rule 4 (comando -> exp_aritmeticas .)
    SUP             reduce using rule 4 (comando -> exp_aritmeticas .)
    INFEQ           reduce using rule 4 (comando -> exp_aritmeticas .)
    SUPEQ           reduce using rule 4 (comando -> exp_aritmeticas .)


state 5

    (5) comando -> exp_relacionais .

    NUMBER          reduce using rule 5 (comando -> exp_relacionais .)
    STRING          reduce using rule 5 (comando -> exp_relacionais .)
    STDOUT          reduce using rule 5 (comando -> exp_relacionais .)
    DOT             reduce using rule 5 (comando -> exp_relacionais .)
    SPACE           reduce using rule 5 (comando -> exp_relacionais .)
    DUP             reduce using rule 5 (comando -> exp_relacionais .)
    COMMENT_LINE    reduce using rule 5 (comando -> exp_relacionais .)
    COMMENT_BLOCK   reduce using rule 5 (comando -> exp_relacionais .)
    DROP            reduce using rule 5 (comando -> exp_relacionais .)
    SWAP            reduce using rule 5 (comando -> exp_relacionais .)
    ROT             reduce using rule 5 (comando -> exp_relacionais .)
    OVER            reduce using rule 5 (comando -> exp_relacionais .)
    CONCAT          reduce using rule 5 (comando -> exp_relacionais .)
    CR              reduce using rule 5 (comando -> exp_relacionais .)
    EMIT            reduce using rule 5 (comando -> exp_relacionais .)
    CHAR            reduce using rule 5 (comando -> exp_relacionais .)
    KEY             reduce using rule 5 (comando -> exp_relacionais .)
    SPACES          reduce using rule 5 (comando -> exp_relacionais .)
    2DUP            reduce using rule 5 (comando -> exp_relacionais .)
    FUNC_BODY       reduce using rule 5 (comando -> exp_relacionais .)
    FUNCTION        reduce using rule 5 (comando -> exp_relacionais .)
    FUNCTION_CALL   reduce using rule 5 (comando -> exp_relacionais .)
    VARIABLE_DEFENITION reduce using rule 5 (comando -> exp_relacionais .)
    VARIABLE_ASSIGNMENT reduce using rule 5 (comando -> exp_relacionais .)
    VARIABLE_FETCH  reduce using rule 5 (comando -> exp_relacionais .)
    VARIABLE_PRINT  reduce using rule 5 (comando -> exp_relacionais .)
    IF              reduce using rule 5 (comando -> exp_relacionais .)
    ELSE            reduce using rule 5 (comando -> exp_relacionais .)
    THEN            reduce using rule 5 (comando -> exp_relacionais .)
    DO              reduce using rule 5 (comando -> exp_relacionais .)
    LOOP            reduce using rule 5 (comando -> exp_relacionais .)
    $end            reduce using rule 5 (comando -> exp_relacionais .)
    PLUS            reduce using rule 5 (comando -> exp_relacionais .)
    MINUS           reduce using rule 5 (comando -> exp_relacionais .)
    TIMES           reduce using rule 5 (comando -> exp_relacionais .)
    DIVIDE          reduce using rule 5 (comando -> exp_relacionais .)
    MOD             reduce using rule 5 (comando -> exp_relacionais .)
    NOT             reduce using rule 5 (comando -> exp_relacionais .)
    INF             reduce using rule 5 (comando -> exp_relacionais .)
    SUP             reduce using rule 5 (comando -> exp_relacionais .)
    INFEQ           reduce using rule 5 (comando -> exp_relacionais .)
    SUPEQ           reduce using rule 5 (comando -> exp_relacionais .)


state 6

    (6) comando -> functions .
